--- a/game/pubspec.yaml
+++ b/game/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_launcher_icons: ^0.11.0
+  confetti: ^0.7.0
+ 
 
 dev_dependencies:
   flutter_test:
